Made the reader and writer work again